manifests/k8s/mongo-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cdcs-mongo-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: cdcs-mongo
  template:
    metadata:
      labels:
        component: cdcs-mongo
    spec:
      volumes:
        - name: mongo-storage
          persistentVolumeClaim:
            claimName: cdcs-pvc-mongo
        - name: mongodb-scripts
          configMap:
            name: cdcs-mongo-init-configmap
            items:
              - key: mongo-init.sh
                path: mongo-init.sh
      containers:
      - image: mongo:6.0
        name: mongodb
        args: ["--auth", "--noscripting"]
        volumeMounts:
        - mountPath: /data/db
          name: mongo-storage
        - mountPath: /docker-entrypoint-initdb.d
          name: mongodb-scripts
          readOnly: true
        ports:
        - containerPort: 27017
      restartPolicy: Always
