manifests/k8s/postgres-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cdcs-postgres-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: cdcs-postgres
  template:
    metadata:
      labels:
        component: cdcs-postgres
    spec:
      volumes:
        - name: postgres-storage
          persistentVolumeClaim:
            claimName: cdcs-pvc-postgres
      containers:
        - name: postgres
          image: postgres:14
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: postgres-storage
              mountPath: /var/lib/postgresql/data
