manifests/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: django-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  tls:
  - hosts:
    - CDCS_HOSTNAME
    secretName: CDCS_TLS
  rules:
  - host: CDCS_HOSTNAME
    http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: django-cluster-ip-service
            port: 
              number: 8080
